# melody.docs

./: .gitignore  404.html  LICENSE  README.md  index.html  mkdocs.yml  pyproject.toml
.github/: FUNDING.yml  dependabot.yml
changelog/: index.html
code_of_conduct/: index.html
contributing/: index.html
dev/config/: index.html
docs/dev/: config.md
search/: search_index.json
