[tool.poetry]
name = "melody.docs"
version = "1.0.0"
description = "MelodyKit documentation."
authors = ["MelodyKit"]
license = "MIT"

readme = "README.md"

homepage = "https://github.com/MelodyKit/melody.docs"
repository = "https://github.com/MelodyKit/melody.docs"
documentation = "https://docs.melodykit.app/"

keywords = ["python", "docs", "documentation"]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Topic :: Documentation",
]

[tool.poetry.urls]
Discord = "https://melodykit.app/discord"
Issues = "https://github.com/MelodyKit/melody.docs/issues"

[tool.poetry.dependencies]
python = ">= 3.7"
mkdocs = ">= 1.4.2"
mkdocs-material = ">= 9.1.6"

[tool.poetry.dependencies.mkdocstrings]
version = ">= 0.21.1"
extras = ["python"]

[tool.poetry.group.dev.dependencies]
changelogging = "1.1.0"

[tool.changelogging]
name = "melody.docs"
version = "1.0.0"
url = "https://github.com/MelodyKit/melody.docs"
directory = "changes"
output = "CHANGELOG.md"

start_string = "<!-- changelogging: start -->"

title_format = "{version} ({date})"
issue_format = "[#{issue}]({url}/pull/{issue})"

bullet = "-"
wrap = true
wrap_size = 100

display = ["feature", "change", "fix", "security", "deprecation", "removal", "internal"]

[build-system]
requires = ["poetry-core >= 1.5.2"]
build-backend = "poetry.core.masonry.api"
